Fix some usability problems with the FirstRun dialog: - if errors occur, do not exit, but return to dialog   (requires to reimplement KDialog::slotButtonPressed, default implementation will always accept after Ok) - remove check to refuse using $HOME as album root. I think, if the user really wants,   we are a free country. Any objections? - When a directory is chosen for album root, change default database directory   to this as well (unless user changed it before)

BUG: 178251

svn path=/trunk/extragear/graphics/digikam/; revision=911111